examples/test/testpolicy14745.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14745
  namespace: namespace442
spec:
  podSelector:
    matchLabels:
      key46: value41
      key1: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value22
          key47: value25
      podSelector:
        matchLabels:
          key17: value0
          key34: value0
          key32: value29
